--- a/challenge-3.html
+++ b/challenge-3.html
@@ -20,6 +20,15 @@ Black
 
 */
 
+for (i = 2; i < ( n + 2 ) ; i++) {
+  if ( i%2 === 0 ) {
+    return ("White" + "<br>");
+  }
+  else {
+    return ( "Black" + "<br>");
+  }
+}
+
 </script>
 
 </body>
