--- a/challenge-5.html
+++ b/challenge-5.html
@@ -29,6 +29,48 @@ Condition: None of the math should be in public methods.
 
 
 */
+var MagicalNumberObject = function ( value ) {
+
+this.square = function() { 
+  
+    return value * value;
+  
+}
+
+this.root = function() { 
+  
+  return Math.sqrt( value );
+  
+}
+
+this.isEven = function() { 
+	
+	if (value %2 === 0 ) {
+	
+		return true;
+		
+		}
+		
+	else {
+	  
+		return false;
+		
+	}
+	
+}
+
+}
+
+var myNum = new MagicalNumberObject(2);
+
+console.log( myNum.square() );
+console.log( myNum.isEven() );
+console.log( myNum.root() );
+
+var myNum = new MagicalNumberObject(9);
+console.log( myNum.square() );
+console.log( myNum.isEven() );
+console.log( myNum.root() );
 
 </script>
 
