--- a/challenge-5.html
+++ b/challenge-5.html
@@ -29,48 +29,39 @@ Condition: None of the math should be in public methods.
 
 
 */
-var MagicalNumberObject = function ( value ) {
 
-this.square = function() { 
-  
-    return value * value;
-  
+function MagicalNumberObject(magic) {
+var value = magic;
+var alpha = function() {
+	return ( value * value);
+	}
+var beta = function() {
+	return (Math.sqrt(value));
 }
-
-this.root = function() { 
-  
-  return Math.sqrt( value );
-  
-}
-
-this.isEven = function() { 
-	
-	if (value %2 === 0 ) {
+var foo = function() {
+		if (value %2 === 0 ) {
 	
 		return true;
-		
 		}
-		
-	else {
-	  
-		return false;
-		
-	}
-	
+	return false;
+}
+this.squared = function () {
+return ( alpha );
+}
+this.rooted = function() { 
+	return(beta);
 }
 
+this.isEvened = function() { 
+	return(foo);
+}
 }
 
 var myNum = new MagicalNumberObject(2);
+var square = myNum.squared();
+console.log( square() );
+// console.log( myNum.squared() ) returns the function, not the solution
 
-console.log( myNum.square() );
-console.log( myNum.isEven() );
-console.log( myNum.root() );
-
-var myNum = new MagicalNumberObject(9);
-console.log( myNum.square() );
-console.log( myNum.isEven() );
-console.log( myNum.root() );
 
 </script>
 
