--- a/challenge-4.html
+++ b/challenge-4.html
@@ -4,76 +4,19 @@
 <title>Challenge 4 - templating</title>
 </head>
 <body>
+<script>
+replacer(template, data);
+replacer(template2, data2);
+replacer(template2, data3);
 
+</script>
 
 
 <div id="myDiv1"></div>
 <div id="myDiv2"></div>
 <div id="myDiv3"></div>
 
-<script>
 
-data = {
-	"name" : "Biggles",
-	"age"  	: "24",
-	"job"	: "Pilot"
-};
-
-var template = 'Hello, my name is {{NAME}}, I am {{AGE}} years old, and I am a {{JOB}} for a living.';
-
-
-data2 = {
-	"specie": "Baboon",
-	"type" : "Monkey",
-	"snout" : "Doglike"
-}
-
-data3 = {
-	"specie": "Eel",
-	"type" : "Fish",
-	"snout" : "snakelike"
-	
-}
-
-var template = "Hello, my name is {{NAME}}, and I am {{AGE}} years old, and I am a {{JOB}} for a living.";
-
-var template2 = 'Hello, I am a {{specie}}, which is a type of {{type}}, that has a {{snout}} snout.';
-var element = document.getElementById("myDiv1");
-
-var replacer = function(template, obj ) {
-
-var patt = /{{.*?}}/;
-
-while ( patt.test(template) == true ){
-
-var bracketed = patt.exec( template ); 
-
-var unBracketed = bracketed.toString().replace("{{", "").replace("}}", "").toLowerCase();
-
-var dataValue = obj[ unBracketed ];
-
-template = template.replace( bracketed, dataValue );
-
-}
-element.innerHTML = replacer( template, dataValue );
-};
-
-
-/*
-
-Create a script that will use the data object and the template to convert it to the string:
-
-Hello, my name is Biggles, I am 24 years old, and I am a Pilot for a living.
-
-and insert that into myDiv1.
-
-Use the same code to do the same with data2 and data3 using tempalte2. 
-
-*/
-
-
-
-</script>
 
 </body>
 </html> 
