--- a/challenge-4.html
+++ b/challenge-4.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<title>Challenge 4 - templating</title>
+		<meta charset="UTF-8">
+		<script src="challenge-4.js">
+
+		</script>
 </head>
+
 <body>
-<script>
-replacer(template, data);
-replacer(template2, data2);
-replacer(template2, data3);
-
-</script>
-
 
 <div id="myDiv1"></div>
 <div id="myDiv2"></div>
 <div id="myDiv3"></div>
-
-
-
+<script>
+replacer( template, data );
+replacer( template2, data2);
+replacer( template2, data3);
+</script>
 </body>
-</html> 
+</html>
