--- a/challenge-1.html
+++ b/challenge-1.html
@@ -14,7 +14,7 @@ for ( var i = 0, len = list.length; i < len; i++ ) {
 
 /*
 This code will output the list one item per row. 
-There are more ways to do the same, try writing 3 different scripts that do the same, but using different methods. 
+There are more ways to do the same, try writing 3 different scripts that do the same, but using different methods (ie. try using while and its friends )
 
 */
 
