--- a/algorithms/bubble_sort.html
+++ b/algorithms/bubble_sort.html
@@ -7,7 +7,9 @@ console.clear();
 var arr = [3, 76, 15, 32, 18, 2, 1, 50, 2, 9];
 /*
 
-We are going to implement bubble sort - https://en.wikipedia.org/wiki/Bubble_sort
+We are going to implement bubble sort -
+(for more info: https://en.wikipedia.org/wiki/Bubble_sort
+http://www.algolist.net/Algorithms/Sorting/Bubble_sort )
 
 This will consist of multiple passes, meaning we loop through the list for length -1 times. 
 in each pass we loop through the length of the array and check each value and the one after it, if the value is bigger than the one 
