--- a/MultiDimArrays.html
+++ b/MultiDimArrays.html
@@ -12,7 +12,7 @@ PART I - Multi dimensional Arrays
 
 1. create a new array called grades. This will be a multi-dimensional array of the structure of:
 
-  grades["STUDENT"]["SUBJECT"] = grade;
+  grades[STUDENT][SUBJECT] = grade;
   
 2. use the math function random() to assign to each student a grade for each subject. 
 
@@ -36,7 +36,7 @@ PART II - add some math
 
 5. add another value to the grades array per student, this will be the avarage. 
 
-grades["STUDENT"]["AVG"] = 0;
+grades[STUDENT][AVG] = 0;
 
 6. For each student calcualte the mean (avarage) of all his/hers grades, and put the value in the ["AVG"] 
 
