--- a/arrays/array_work.html
+++ b/arrays/array_work.html
@@ -13,7 +13,7 @@ var str1= "egg,mango,avocado,banana,tomato,pizza,lemon";
 1. create a function that will take an array as an argument, and return an new array that has only the numbers from the given
 array. 
 
-2. run this function for each of the given arrays and create new arrays that have just the numbers. than sort the results. 
+2. run this function for each of the given arrays and create new arrays that have just the numbers. then sort the results. 
 
 3. create a function that will take an array as an argument, and return a new array that has only the string values. 
 
